First two tasks complete/

--- a/StringCalculatorConsoleApplication/StringCalculatorUnitTestProject/StringCalculatorUnitTestProject.csproj
+++ b/StringCalculatorConsoleApplication/StringCalculatorUnitTestProject/StringCalculatorUnitTestProject.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="CalculatorLogicClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StringCalculatorConsoleApplication\StringCalculatorConsoleApplication.csproj">
+      <Project>{a84d21f3-b8d6-4728-9384-35996707154f}</Project>
+      <Name>StringCalculatorConsoleApplication</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
